w trakcie - menu nawigacyjne

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 </head>
 
 <body>
+   
+    <nav id="main-nav">
+        <ul>
+            <li class="menu-item"><a href="#">O mnie</a></li>
+            <li class="menu-item"><a href="#">Umiejętności</a></li>
+            <li class="menu-item"><a href="#">Portfolio</a></li>
+            <li class="menu-item"><a href="#">Kontakt</a></li>
+        </ul>
+    </nav>
     
     <h1>Marcin Gałka - Portfolio</h1>
 
